fix: update package name to non-scoped codeflow-mcp-server
- Change from @codeflow/mcp-server to codeflow-mcp-server to avoid npm org issues
- Update all documentation references
- Rebuild and publish to npm successfully

Package is now available via: npx codeflow-mcp-server

--- a/packages/agentic-mcp/package.json
+++ b/packages/agentic-mcp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@codeflow/mcp-server",
+  "name": "codeflow-mcp-server",
   "version": "0.1.0",
   "description": "MCP server for CodeFlow AI-assisted development workflows",
   "type": "module",
