feat: synchronize commands across all locations for consistency
- Update .claude/commands/ with comprehensive versions from command/
- Update .opencode/command/ with latest comprehensive command definitions
- Ensure MCP server loads the most complete command definitions
- All locations now have consistent, detailed workflow commands

Commands synchronized:
- research: Full codebase research with agent orchestration (165 lines)
- plan: Comprehensive implementation planning (374 lines)
- execute: Detailed execution workflow (66 lines)
- test: Complete testing strategies (79 lines)
- document: Documentation generation (106 lines)
- commit: Git commit management (45 lines)
- review: Implementation review process (162 lines)

This ensures consistent experience across Claude Code slash commands
and MCP server integrations.

--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
   },
   "scripts": {
     "install": "bun link",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "mcp:server": "bun run mcp/agentic-server.mjs",
+    "mcp:dev": "bun run --watch mcp/agentic-server.mjs"
   },
   "dependencies": {
     "agentic": "link:agentic"
   },
   "devDependencies": {
+    "@modelcontextprotocol/sdk": "^1.17.4",
     "@types/bun": "latest",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "zod": "^4.1.1"
   }
 }
