--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
 node_modules/
 bun.lockb
 .DS_Store
+
+# Build artifacts
+dist/
+bin/
+*.log
+
+# Environment files
+.env
+.env.local
+
+# IDE
+.vscode/
+.idea/
+
+# OS files
+Thumbs.dbtsconfig.tsbuildinfo
