--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "agentic",
+  "name": "codeflow",
   "version": "0.1.0",
   "type": "module",
   "bin": {
-    "agentic": "./src/cli/index.ts"
+    "codeflow": "./src/cli/index.ts"
   },
   "scripts": {
     "install": "bun link",
     "typecheck": "tsc --noEmit",
-    "mcp:server": "bun run mcp/agentic-server.mjs",
-    "mcp:dev": "bun run --watch mcp/agentic-server.mjs"
+    "mcp:server": "bun run mcp/codeflow-server.mjs",
+    "mcp:dev": "bun run --watch mcp/codeflow-server.mjs"
   },
   "dependencies": {
-    "agentic": "link:agentic"
+    "codeflow": "link:codeflow"
   },
   "devDependencies": {
     "@modelcontextprotocol/sdk": "^1.17.4",
