Add configuration management and agent model support
- Add config command for getting/setting configuration values
- Add --agent-model CLI option for pull and status commands
- Implement agent model configuration with priority resolution
- Add template processing for agent files to inject model values
- Update package.json with bin field for executable command
- Update commit documentation with improved git workflow

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.7",
   "description": "Modular AI agent system with specialized subagents and commands for enhanced OpenCode capabilities",
   "type": "module",
+  "bin": {
+    "agentic": "./bin/agentic"
+  },
   "scripts": {
     "typecheck": "tsc --noEmit",
     "build": "bun build ./src/cli/index.ts --compile --outfile ./bin/agentic",
