docs: update readme with up to date instructions and add bun run build to the required setup for source

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "scripts": {
     "typecheck": "tsc --noEmit",
     "build": "bun build ./src/cli/index.ts --compile --outfile ./bin/agentic",
-    "publish": "./scripts/publish.ts"
+    "publish": "./scripts/publish.ts",
+    "release": "./scripts/release.sh"
   }
 }
