docs: update changelog [skip ci]

--- a/package.json
+++ b/package.json
@@ -64,6 +64,9 @@
     "sync:fix": "bun run src/sync-with-validation.ts --fix",
     "sync:validate": "bun run src/sync-with-validation.ts --validate",
     "sync:claude": "./sync-claude-global.sh",
+    "sync:smart": "./scripts/sync-with-model-config.sh",
+    "sync:opencode": "./scripts/sync-with-model-config.sh",
+    "fix:models": "./scripts/fix-opencode-models.sh && ./scripts/fix-opencode-agent-models.sh",
     "yaml:validate": "bun run src/utils/yaml-validator.ts",
     "yaml:fix": "bun run src/utils/yaml-validator.ts --fix",
     "mcp:server": "bun run mcp/codeflow-server.mjs",
