--- a/package.json
+++ b/package.json
@@ -80,7 +80,13 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "changelog:first": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "release": "./scripts/release.sh",
+    "release:patch": "./scripts/release.sh --bump-patch",
+    "release:minor": "./scripts/release.sh --bump-minor",
+    "release:major": "./scripts/release.sh --bump-major",
     "release:publish": "./scripts/release.sh --publish",
+    "release:publish:patch": "./scripts/release.sh --publish --bump-patch",
+    "release:publish:minor": "./scripts/release.sh --publish --bump-minor",
+    "release:publish:major": "./scripts/release.sh --publish --bump-major",
     "prepublishOnly": "bun run typecheck && bun run test && bun run lint || echo \"Lint warnings found but continuing with publish\"",
     "prepack": "bun run typecheck",
     "build:cli": "bun build src/cli/index.ts --target bun",
