fix: prevent README duplication and improve CLI documentation
- Fix setup.ts bug that repeatedly appended workflow docs to README
- Add skipReadmeUpdate flag to properly skip when marker already exists
- Replace corrupted README with proper CLI package documentation
- Add comprehensive installation instructions for scoped package
- Document all core CLI commands and workflows
- Improve agent system overview and links to detailed docs

Related to v0.12.8 updates for scoped package installation

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "AI Agent & Command Distribution Platform - Deploy 33+ specialized AI agents and workflow commands to any project instantly",
   "type": "module",
   "bin": {
-    "codeflow": "./src/cli/index.ts"
+    "codeflow": "./src/cli/index.ts",
+    "agentic-codeflow": "./src/cli/index.ts"
   },
   "keywords": [
     "cli",
