--- a/AGENT_MANIFEST.json
+++ b/AGENT_MANIFEST.json
@@ -411,6 +411,16 @@
       }
     },
     {
+      "name": "documentation-specialist",
+      "description": "Expert at generating API documentation, user guides, and technical specifications.",
+      "category": "development",
+      "sources": {
+        "base": "codeflow-agents/development/documentation-specialist.md",
+        "claude-code": ".claude/agents/documentation-specialist.md",
+        "opencode": ".opencode/agent/documentation-specialist.md"
+      }
+    },
+    {
       "name": "dx-optimizer",
       "description": "Developer Experience specialist.",
       "category": "operations",
@@ -1181,6 +1191,6 @@
       }
     }
   ],
-  "total_agents": 118,
+  "total_agents": 119,
   "last_updated": "2025-10-04T04:46:07.603Z"
 }
