--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,6 +43,11 @@ jobs:
       - name: Install dependencies
         run: bun install
 
+      - name: Generate command files for testing
+        run: |
+          bun run src/cli/index.ts setup . --type claude-code
+          bun run src/cli/index.ts setup . --type opencode
+
       - name: Run TypeScript type checking
         run: bun run typecheck
 
