feat: enhance agent ecosystem with comprehensive updates
- Update 30+ Claude Code agents with improved descriptions and standardized format
- Add comprehensive usage examples and command output documentation
- Implement model inheritance and tool optimization across agents
- Update agent manifest with enhanced metadata and capabilities
- Improve command documentation with better structure and examples
- Add TypeScript Node.js configuration for better cross-runtime support
- Update conversion scripts to handle enhanced agent formats
- Improve test reporting and validation workflows

This update significantly improves the agent ecosystem with better documentation,
standardized formats, and enhanced capabilities for AI-assisted development.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@agentic-codeflow/cli",
-  "version": "0.14.7",
+  "version": "0.14.9",
   "description": "AI Agent & Command Distribution Platform - Deploy 33+ specialized AI agents and workflow commands to any project instantly",
   "type": "module",
   "bin": {
@@ -52,32 +52,55 @@
   },
   "scripts": {
     "install": "bun link",
+    "install:node": "npm link",
     "typecheck": "tsc --noEmit",
+    "typecheck:node": "tsc --noEmit --project tsconfig.node.json",
     "test": "bun run run-tests.ts",
+    "test:node": "node --loader ts-node/esm run-tests.ts",
     "test:unit": "bun run run-tests.ts unit",
+    "test:unit:node": "node --loader ts-node/esm run-tests.ts unit",
     "test:integration": "bun run run-tests.ts integration",
+    "test:integration:node": "node --loader ts-node/esm run-tests.ts integration",
     "test:e2e": "bun run run-tests.ts e2e",
+    "test:e2e:node": "node --loader ts-node/esm run-tests.ts e2e",
     "test:e2e:sequential": "bun run scripts/run-e2e-tests.ts",
+    "test:e2e:sequential:node": "node --loader ts-node/esm scripts/run-e2e-tests.ts",
     "test:watch": "bun test --watch",
+    "test:watch:node": "node --loader ts-node/esm node_modules/.bin/mocha --watch tests/**/*.test.ts",
     "test:coverage": "bun run run-tests.ts --coverage",
+    "test:coverage:node": "node --loader ts-node/esm run-tests.ts --coverage",
     "test:agents": "bun test tests/unit/agents",
+    "test:agents:node": "node --loader ts-node/esm node_modules/.bin/mocha tests/unit/agents/**/*.test.ts",
     "test:commands": "bun test tests/unit/commands",
+    "test:commands:node": "node --loader ts-node/esm node_modules/.bin/mocha tests/unit/commands/**/*.test.ts",
     "test:cli": "bun test tests/unit/cli",
+    "test:cli:node": "node --loader ts-node/esm node_modules/.bin/mocha tests/unit/cli/**/*.test.ts",
     "test:conversion": "bun test tests/unit/catalog/conversion.test.ts",
+    "test:conversion:node": "node --loader ts-node/esm node_modules/.bin/mocha tests/unit/catalog/conversion.test.ts",
     "sync": "bun run src/sync-with-validation.ts",
+    "sync:node": "node --loader ts-node/esm src/sync-with-validation.ts",
     "sync:global": "bun run src/sync-with-validation.ts --global",
+    "sync:global:node": "node --loader ts-node/esm src/sync-with-validation.ts --global",
     "sync:fix": "bun run src/sync-with-validation.ts --fix",
+    "sync:fix:node": "node --loader ts-node/esm src/sync-with-validation.ts --fix",
     "sync:validate": "bun run src/sync-with-validation.ts --validate",
+    "sync:validate:node": "node --loader ts-node/esm src/sync-with-validation.ts --validate",
     "sync:claude": "./sync-claude-global.sh",
     "sync:smart": "./scripts/sync-with-model-config.sh",
     "sync:opencode": "./scripts/sync-with-model-config.sh",
     "fix:models": "./scripts/fix-opencode-models.sh && ./scripts/fix-opencode-agent-models.sh",
     "yaml:validate": "bun run src/utils/yaml-validator.ts",
+    "yaml:validate:node": "node --loader ts-node/esm src/utils/yaml-validator.ts",
     "yaml:fix": "bun run src/utils/yaml-validator.ts --fix",
+    "yaml:fix:node": "node --loader ts-node/esm src/utils/yaml-validator.ts --fix",
     "mcp:server": "bun run mcp/codeflow-server.mjs",
+    "mcp:server:node": "node mcp/codeflow-server.mjs",
     "mcp:dev": "bun run --watch mcp/codeflow-server.mjs",
+    "mcp:dev:node": "node --watch mcp/codeflow-server.mjs",
     "server": "bun run src/cli/index.ts server start",
+    "server:node": "node --loader ts-node/esm src/cli/index.ts server start",
     "server:dev": "bun run --watch src/cli/index.ts server start",
+    "server:dev:node": "node --watch --loader ts-node/esm src/cli/index.ts server start",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
@@ -93,8 +116,11 @@
     "release:publish:minor": "./scripts/release.sh --publish --bump-minor",
     "release:publish:major": "./scripts/release.sh --publish --bump-major",
     "prepublishOnly": "bun run typecheck && bun run lint || echo \"Lint warnings found but continuing with publish\"",
+    "prepublishOnly:node": "npm run typecheck:node && npm run lint || echo \"Lint warnings found but continuing with publish\"",
     "prepack": "bun run typecheck",
+    "prepack:node": "npm run typecheck:node",
     "build:cli": "bun build src/cli/index.ts --target bun",
+    "build:cli:node": "esbuild src/cli/index.ts --bundle --platform=node --target=node18 --outfile=dist/cli.js",
     "prepare": "husky"
   },
   "dependencies": {
@@ -116,16 +142,21 @@
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.36.0",
     "@types/bun": "latest",
+    "@types/node": "^20.0.0",
     "@types/semver": "^7.7.1",
     "@typescript-eslint/eslint-plugin": "^8.44.0",
     "@typescript-eslint/parser": "^8.44.0",
     "conventional-changelog-angular": "^8.0.0",
     "conventional-changelog-cli": "^5.0.0",
+    "esbuild": "^0.24.0",
     "eslint": "^9.36.0",
     "eslint-config-prettier": "^9.1.2",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "husky": "^9.1.7",
+    "mocha": "^10.8.2",
+    "nyc": "^17.1.0",
     "prettier": "^3.6.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   }
 }
