--- a/package.json
+++ b/package.json
@@ -149,6 +149,7 @@
     "@types/semver": "^7.7.1",
     "@typescript-eslint/eslint-plugin": "^8.44.0",
     "@typescript-eslint/parser": "^8.44.0",
+    "bun-types": "^1.3.1",
     "conventional-changelog-angular": "^8.0.0",
     "conventional-changelog-cli": "^5.0.0",
     "esbuild": "^0.24.0",
