--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,10 +37,25 @@ jobs:
 
       - name: Configure npm for OIDC
         run: |
-          # Try using the OIDC token that GitHub Actions should provide
-          echo "Attempting OIDC authentication..."
-          echo "Available env vars:" | env | grep -i oidc || echo "No OIDC vars found"
-          echo "Node auth config:" && cat ~/.npmrc 2>/dev/null || echo "No .npmrc found"
+          # Exchange GitHub OIDC token for npm authentication
+          echo "Exchanging OIDC token for npm authentication..."
+
+          # Get OIDC token from GitHub Actions
+          OIDC_TOKEN=$(curl -s -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" \
+            "$ACTIONS_ID_TOKEN_REQUEST_URL&audience=npm" | jq -r '.value')
+
+          if [ -z "$OIDC_TOKEN" ] || [ "$OIDC_TOKEN" = "null" ]; then
+            echo "Failed to get OIDC token"
+            exit 1
+          fi
+
+          echo "OIDC token received successfully"
+
+          # Configure npm with OIDC token
+          echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" > ~/.npmrc
+          echo "NPM_TOKEN=$OIDC_TOKEN" >> $GITHUB_ENV
+
+          # Test authentication
           npm whoami
 
       - name: Install dependencies
