fix: simplify OIDC token configuration for npm
- Remove environment variable passing and use token directly
- Configure npm with OIDC token in .npmrc
- Test authentication immediately

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,10 +37,10 @@ jobs:
 
       - name: Configure npm for OIDC
         run: |
-          # Exchange GitHub OIDC token for npm authentication
-          echo "Exchanging OIDC token for npm authentication..."
+          # Configure npm for OIDC using the standard approach
+          echo "Configuring npm for OIDC authentication..."
 
-          # Get OIDC token from GitHub Actions
+          # Try using the OIDC token with npm's expected format
           OIDC_TOKEN=$(curl -s -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" \
             "$ACTIONS_ID_TOKEN_REQUEST_URL&audience=npm" | jq -r '.value')
 
@@ -49,11 +49,10 @@ jobs:
             exit 1
           fi
 
-          echo "OIDC token received successfully"
+          echo "OIDC token received, configuring npm..."
 
-          # Configure npm with OIDC token
-          echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" > ~/.npmrc
-          echo "NPM_TOKEN=$OIDC_TOKEN" >> $GITHUB_ENV
+          # Set up npm config for OIDC
+          echo "//registry.npmjs.org/:_authToken=$OIDC_TOKEN" > ~/.npmrc
 
           # Test authentication
           npm whoami
