fix: correct YAML syntax in release workflow
Add missing dash to Setup Node.js step to fix workflow execution error.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           bun-version: latest
 
-- name: Setup Node.js
+- - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
