--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,13 +33,8 @@ jobs:
           node-version: '20'
           registry-url: 'https://registry.npmjs.org'
 
-      - name: Configure npm for OIDC
-        run: |
-          # Debug OIDC token availability
-          echo "NODE_AUTH_TOKEN: ${NODE_AUTH_TOKEN:0:20}..."
-          echo "ACTIONS_ID_TOKEN_REQUEST_URL: $ACTIONS_ID_TOKEN_REQUEST_URL"
-          echo "Testing npm OIDC authentication..."
-          npm whoami || echo "npm whoami failed"
+      - name: Update npm to latest version
+        run: npm install -g npm@latest
 
       - name: Install dependencies
         run: bun install
@@ -59,10 +54,6 @@ jobs:
         run: |
           git config --global user.email "agentic@bod.care"
           git config --global user.name "agentic"
-
-          # Debug OIDC token availability
-          echo "NODE_AUTH_TOKEN: ${NODE_AUTH_TOKEN:0:20}..."
-          echo "ACTIONS_ID_TOKEN_REQUEST_URL: $ACTIONS_ID_TOKEN_REQUEST_URL"
 
           if [ "${{ github.event_name }}" = "push" ]; then
             AGENTIC_VERSION=${{ steps.version.outputs.version }} bun run ./scripts/publish.ts
