--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          registry-url: 'https://registry.npmjs.org'
+          # Don't set registry-url when using OIDC - npm will handle authentication automatically
 
       - name: Upgrade npm to 11.5.1+ for OIDC support
         run: |
