fix: prevent package.json corruption during version updates
- Replace JSON.stringify() in publish.ts with regex-based version replacement
- Preserves original formatting, whitespace, and all script parameters
- Restore --outfile dist/cli.js to build:cli script
- Add mkdir -p dist to prepublishOnly script

This fixes the npm publish failure where dist/cli.js wasn't created due to
the publish script corrupting package.json and removing the --outfile parameter
from the build:cli script during version updates.

--- a/package.json
+++ b/package.json
@@ -118,11 +118,11 @@
     "release:publish:patch": "./scripts/release.sh --publish --bump-patch",
     "release:publish:minor": "./scripts/release.sh --publish --bump-minor",
     "release:publish:major": "./scripts/release.sh --publish --bump-major",
-    "prepublishOnly": "bun run typecheck && bun run build:cli && bun run lint || echo \"Lint warnings found but continuing with publish\"",
+    "prepublishOnly": "mkdir -p dist && bun run typecheck && bun run build:cli && bun run lint || echo \"Lint warnings found but continuing with publish\"",
     "prepublishOnly:node": "npm run typecheck:node && npm run build:cli:node && npm run lint || echo \"Lint warnings found but continuing with publish\"",
     "prepack": "bun run typecheck",
     "prepack:node": "npm run typecheck:node",
-    "build:cli": "bun build src/cli/index.ts --target bun",
+    "build:cli": "bun build src/cli/index.ts --target bun --outfile dist/cli.js",
     "build:cli:node": "esbuild src/cli/index.ts --bundle --platform=node --target=node18 --outfile=dist/cli.js",
     "prepare": "echo 'Husky prepared'"
   },
